style: fix slightly off center banner

--- a/src/components/home.css
+++ b/src/components/home.css
@@ -10,7 +10,6 @@
 
 #box {
   position: relative;
-  left: 10px;
   padding: 60px;
   margin: auto;
   width: 70%;
