--- a/src/components/review.css
+++ b/src/components/review.css
@@ -10,7 +10,6 @@
 
 #box-md {
   position: relative;
-  left: 10px;
   padding: 50px;
   margin: auto;
   width: 70%;
@@ -25,7 +24,7 @@ h2 {
 }
 
 #review-form {
-  max-width: 1100px;
+  max-width: 1000px;
   position: relative;
   margin: auto;
   align-items: center;
